<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:tool="http://schemas.android.com/tools"
        android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/todo_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/todo_hint"
            style="@style/Widget.Todo.TextInputLayout.OutlinedTextBox"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/todo_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:maxLines="1"
                android:autofillHints="false"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>